HTML5 aside element exposes wrong IAccessible2 xml-roles object attribute when ARIA role attribute is set
Categories
(Core :: Disability Access APIs, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | verified |
People
(Reporter: mozbugzilla2021, Assigned: morgan)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:69.0) Gecko/20100101 Firefox/69.0
Steps to reproduce:
- Load test case at https://jsfiddle.net/jhkfsqon/6/show
- Inspect generated IAccessible2 xml-roles object attribute for
<aside role="note">and<aside role="group">
Actual results:
xml-roles object attribute on <aside> elements is always complementary
Expected results:
The xml-roles object attribute should match the ARIA role attribute and be set to note and group, respectively, per CORE-AAM Role Mapping General Rules.
Chrome works as expected and sets the xml-roles object attribute for <aside> elements to match the ARIA role attribute.
Firefox works as expected with other HTML5 elements like <header> and <footer>, which is interesting. (I didn’t test every HTML5 element, so I don’t know which other ones might be broken.)
This bug currently causes <aside> elements with non-default role attributes to be read incorrectly in at least NVDA 2019.2.
The actual versions of Firefox I used for testing were Firefox 69 (release build 20190827005903) and Firefox 71a1 (nightly build 20190908094652) on Windows 7.
Comment 2•6 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
It seems that this is simply due to HyperTextAccessible::LandmarkRole returning values for <aside>, <nav>, and <main>, and then Accessible::Attributes using the return value of that function preferentially to the ARIA role attribute. It seems like the logic in Accessible::Attributes simply needs to be changed so that it looks for the role attribute first, and then falls back to the return value of LandmarkRole if it doesn’t.
Comment 4•6 years ago
|
||
The priority flag is not set for this bug.
:Jamie, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 5•6 years ago
|
||
Comment 7•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Confirmed the issue with 71.0a1 (2019-09-08).
Fix verified with 72.0a1 (2019-11-19) on Windows 10 and 71.0b11 on Windows 10, macOS 10.13, Ubuntu 18.04.
Description
•