Bug 1579750: Consider aria role before landmark role for xlm-roles attribute. r=Jamie

Differential Revision: https://phabricator.services.mozilla.com/D49178